@@ -3,6 +3,7 @@ Revision history for Perl extension Math::Prime::Util.
 0.11  19 July 2012
     - Turn of threading tests on Cygwin, as threads now gives random panics.
     - Use pow instead of exp2 -- some systems don't have exp2.
+    - Fix compile issues on MSC, thanks to Sisyphus.
 
 
 0.10  16 July 2012
